# Proyecto_2_Datos_2_IIS_2025

./: .gitignore  CMakeLists.txt  Documentacion_Gestor_CodeCoach.docx  LICENSE  ProyectoCompleto.txt  README.md  main.cpp  soluciones.txt  solucionesERRONEAS.txt
Analizador/: Gemini_test.ps1  main.cpp  server.cpp  test_api.ps1
Analizador/Analyzer/: analizador.cpp  analizador.h
Analizador/Env/: env_loader.cpp  env_loader.h
Analizador/LLM/: gemini_client.cpp  gemini_client.h
Gestor/: 1.txt  CMakeLists.txt  GestorREST.cpp  main_db_test.cpp
Gestor/include/: ProblemRepository.h
Gestor/src/: ProblemRepository.cpp
Gestor/test_json/: p1.json
Motor/: 2.txt
Motor/evaluation_engine/include/: DockerRunner.h  EvaluationService.h  Models.h  OutputComparer.h  SubmissionFilesystem.h
Motor/evaluation_engine/src/: DockerRunner.cpp  EvaluationService.cpp  OutputComparer.cpp  SubmissionFilesystem.cpp  server_main.cpp
UI/: 3.txt  AdminWindow.xaml  AdminWindow.xaml.cs  ApiClient.cs  App.xaml.cs  AssemblyInfo.cs  CppNeonPastel.xshd  MainWindow.xaml  MainWindow.xaml.cs  UI.csproj  UI.sln
UI/Models/: EvaluationDtos.cs  ProblemDto.cs
UI/Services/: AnalyzerApiClient.cs  ProblemApiClient.cs
docker/cpp/: Dockerfile
evaluation_engine/: CMakeLists.txt
evaluation_engine/include/: DockerRunner.h  EvaluationService.h  Models.h  OutputComparer.h  SubmissionFilesystem.h
evaluation_engine/src/: DockerRunner.cpp  EvaluationService.cpp  OutputComparer.cpp  SubmissionFilesystem.cpp  demo_main.cpp  server_main.cpp
